@@ -1,3 +1,7 @@
+2008-03-14  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsmodule.c (initcups): Add CUPS_PRINTER_DISCOVERED constant.
+
 2008-03-12  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_authenticateJob): New method.
